fix swagger & error
